Fix spacing and alert message for 4K displays

--- a/public/styles.css
+++ b/public/styles.css
@@ -203,7 +203,7 @@ form input:not([type="submit"])::placeholder {
     font-style: italic;
     text-align: center;
     position: absolute;
-    margin-left: 300px;
+    margin-left: 9.5%;
     margin-top: 30px;
     padding: 25px 0 25px 0;
     transition: 1s;
